# PurrfectKit

./: .buildinfo  .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .secrets.baseline  CNAME  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  api.html  contributing.html  dev-guide.html  genindex.html  index.html  installation.html  meow.html  modules.html  objects.inv  package-list.txt  purrfectmeow.html  purrfectmeow.tc01_spl.html  purrfectmeow.tc02_mlt.html  purrfectmeow.tc03_wcm.html  purrfectmeow.tc04_kmn.html  purrfectmeow.tc05_knj.html  py-modindex.html  pyproject.toml  quickstart.html  readme.html  release.sh  requirements.txt  search.html  searchindex.js  (+2 more)
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  purrfectmeow.doctree  purrfectmeow.tc01_spl.doctree  purrfectmeow.tc02_mlt.doctree  purrfectmeow.tc03_wcm.doctree  purrfectmeow.tc04_kmn.doctree  purrfectmeow.tc05_knj.doctree  quickstart.doctree  usage.doctree
.github/workflows/: docker-image.yml  docs-pages.yml  docs_pages.yml  publish-to-pypi.yml  unit-and-coverage.yml
_modules/: index.html
_modules/purrfectmeow/: kitty.html
_modules/purrfectmeow/konja/: base.html  splitter.html
_modules/purrfectmeow/meeze/: base.html
_modules/purrfectmeow/plort/: base.html  embedder.html  tokenization.html  vectorstore.html
_modules/purrfectmeow/sawat/: base.html  markdown.html  ocr.html  simple.html
_modules/purrfectmeow/taeng/: base.html  file_handler.html  file_metadata.html  model_loader.html  template_doc.html  tokenizer.html
_modules/purrfectmeow/tc01_spl/: base.html  markdown.html  ocr.html  simple.html
_modules/purrfectmeow/tc02_mlt/: base.html  separate.html  token.html
_modules/purrfectmeow/tc03_wcm/: base.html  local.html
_modules/purrfectmeow/tc04_kmn/: base.html  cosine.html
_modules/purrfectmeow/tc05_knj/: base.html
_sources/: contributing.rst.txt  dev-guide.rst.txt  index.rst.txt  meow.rst.txt  modules.rst.txt  purrfectmeow.tc05_knj.rst.txt  quickstart.rst.txt  readme.rst.txt  usage.rst.txt  version.rst.txt
_sources/modules/: konja.rst.txt  purrfectmeow.konja.base.rst.txt  purrfectmeow.konja.rst.txt  purrfectmeow.konja.splitter.rst.txt  purrfectmeow.meeze.base.rst.txt  purrfectmeow.meeze.rst.txt  purrfectmeow.plort.rst.txt  purrfectmeow.plort.vectorstore.rst.txt  purrfectmeow.sawat.ocr.rst.txt  purrfectmeow.sawat.rst.txt  purrfectmeow.sawat.simple.rst.txt  purrfectmeow.taeng.base.rst.txt  purrfectmeow.taeng.file_handler.rst.txt  purrfectmeow.taeng.file_metadata.rst.txt  purrfectmeow.taeng.rst.txt  purrfectmeow.taeng.template_doc.rst.txt  taeng.rst.txt
docs/: conf.py  index.rst  installation.rst  purrfectmeow.rst  purrfectmeow.tc01_spl.rst  purrfectmeow.tc02_mlt.rst  purrfectmeow.tc03_wcm.rst  purrfectmeow.tc04_kmn.rst  usage.rst
docs/source/: api.rst  conf.py  index.rst  meow.rst  readme.rst  usage.rst  version.rst
docs/source/modules/: meeze.rst  modules.rst  plort.rst  purrfectmeow.konja.base.rst  purrfectmeow.konja.rst  purrfectmeow.konja.splitter.rst  purrfectmeow.meeze.base.rst  purrfectmeow.plort.base.rst  purrfectmeow.plort.embedder.rst  purrfectmeow.plort.tokenization.rst  purrfectmeow.rst  purrfectmeow.sawat.base.rst  purrfectmeow.sawat.markdown.rst  purrfectmeow.taeng.model_loader.rst  purrfectmeow.taeng.rst  purrfectmeow.taeng.tokenizer.rst  sawat.rst  taeng.rst
docs/source/purrfectmeow/: konja.rst  meeze.rst  plort.rst  sawat.rst  taeng.rst
example/: usage.ipynb
modules/: konja.html  meeze.html  modules.html  plort.html  purrfectmeow.html  purrfectmeow.konja.base.html  purrfectmeow.konja.html  purrfectmeow.konja.splitter.html  purrfectmeow.meeze.base.html  purrfectmeow.meeze.html  purrfectmeow.plort.base.html  purrfectmeow.plort.embedder.html  purrfectmeow.plort.html  purrfectmeow.plort.tokenization.html  purrfectmeow.plort.vectorstore.html  purrfectmeow.sawat.base.html  purrfectmeow.sawat.html  purrfectmeow.sawat.markdown.html  purrfectmeow.sawat.ocr.html  purrfectmeow.sawat.simple.html  purrfectmeow.taeng.base.html  purrfectmeow.taeng.file_handler.html  purrfectmeow.taeng.file_metadata.html  purrfectmeow.taeng.html  purrfectmeow.taeng.model_loader.html  purrfectmeow.taeng.template_doc.html  purrfectmeow.taeng.tokenizer.html  sawat.html  taeng.html
purrfectmeow/: __init__.py  kitty.py  phayak.py
purrfectmeow/konja/: __init__.py  base.py  splitter.py
purrfectmeow/meeze/: __init__.py  base.py  vectorstore.py
purrfectmeow/meow/: chaus.py  felis.py  kitty.py
purrfectmeow/meow/felidae/: models.yaml
purrfectmeow/phayak/: KhaoManee.py  Kornja.py  Malet.py  Suphalaks.py  WichienMaat.py
purrfectmeow/plort/: __init__.py  base.py  embedder.py  embeddings.py  tokenization.py
purrfectmeow/sawat/: __init__.py  base.py  markdown.py  ocr.py  simple.py
purrfectmeow/taeng/: __init__.py  base.py  file_handler.py  file_metadata.py  model_loader.py  template_doc.py  tokenizer.py
purrfectmeow/tc01_spl/: __init__.py  base.py  markdown.py  ocr.py  simple.py
purrfectmeow/tc02_mlt/: __init__.py  base.py  separate.py  token.py
purrfectmeow/tc03_wcm/: __init__.py  base.py  huggingface.py  local.py  ollama.py  openai.py
purrfectmeow/tc04_kmn/: __init__.py  base.py  cosine.py
purrfectmeow/tc05_knj/: __init__.py  base.py
tests/: something.txt  test_00_doc.py  test_00_met.py  test_00_tem.py
