[project]
name = "purrfectkit"
version = "0.2.0"
description = "**PurrfectKit** is a whimsical Python library that blends feline charm with powerful NLP functionality."
readme = "README.md"
authors = [{ name = "SUWALUTIONS", email = "suwa@suwalutions.com" }]
maintainers = [{ name = "KHARAPSY", email = "kharapsy@suwalutions.com" }]
license = "MIT"
requires-python = ">=3.10"
keywords = ["rag", "nlp", "llms", "python", "ai", "ocr", "document-processing", "multilingual", "text-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "python-magic<=0.4.27",
    "sentence_transformers<=5.1.0",
    "transformers<=4.52.1",
    "docling<=2.31.1",
    "markitdown<=0.1.1",
    "pymupdf4llm<=0.0.27",
    "pdf2image<=1.17.0",
    "pytesseract<=0.3.13",
    "easyocr<=1.7.2",
    "surya-ocr<=0.14.0",
    "python-doctr<=1.0.0",
    "pandas<=2.3.2",
]

[project.optional-dependencies]
Dev = [
]

[project.urls]
Homepage = "https://github.com/SUWALUTIONS/PurrfectKit"
Documentation = "https://purrfectkit.SUWALUTIONS.com/"
Repository = "https://github.com/SUWALUTIONS/PurrfectKit"
Issues = "https://github.com/SUWALUTIONS/PurrfectKit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".cache"
]
packages = ["purrfectmeow"]

[tool.hatch.metadata]
allow-direct-references = true
