[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "purrfectkit"
version = "0.2.6"
authors = [{ name = "SUWALUTIONS", email = "suwa@suwalutions.com" }]
maintainers = [{ name = "KHARAPSY", email = "kharapsy@suwalutions.com" }]
description = "**PurrfectKit** is a Python library for effortless Retrieval-Augmented Generation (RAG) workflows."
keywords = ["rag", "nlp", "llms", "python", "ai", "ocr", "document-processing", "multilingual", "text-extraction"]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: General",
    "Natural Language :: English",
    "Natural Language :: Thai",
]

dependencies = [
    "python-magic<=0.4.27",
    "sentence_transformers<=5.1.0",
    "transformers<=4.53.0",
    "docling<=2.31.1",
    "markitdown<=0.1.1",
    "pymupdf4llm<=0.0.27",
    "pdf2image<=1.17.0",
    "pytesseract<=0.3.13",
    "easyocr<=1.7.2",
    "surya-ocr<=0.14.0",
    "python-doctr<=1.0.0",
    "typhoon-ocr<=0.4.1",
    "pandas<=2.3.2",
    "langchain-text-splitters<=1.0.0",
    "tiktoken<=0.12.0",
]

[project.optional-dependencies]
Dev = [
    "ruff<=0.6.0",
    "mypy<=1.11.0",
    "pre-commit<=3.8.0",
    "detect-secrets<=1.5.0",
    "codecov-cli<=11.2.4"
]
Docs = [
    "sphinx<=8.2.3",
    "sphinx-rtd-theme<=3.0.2",
]
Test = [
    "pytest<=8.4.2",
    "pytest-cov<=7.0.0",
    "pytest-mock<=3.15.1",
]

[project.urls]
Documentation = "https://suwalutions.github.io/PurrfectKit"
Repository = "https://github.com/SUWALUTIONS/PurrfectKit"
Issues = "https://github.com/SUWALUTIONS/PurrfectKit/issues"

[tool.uv.build-backend]
module-root = ""
module-name = "purrfectmeow"
include = ["LICENSE", "README.md", "pyproject.toml"]
exclude = [
    ".cache/",
    ".git/",
    ".github/",
    ".pytest_cache/",
    ".venv/",
    "build/",
    "dist/",
    "docs/",
    "test",
    "tests/",
    ".dockerignore",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".secrets.baseline",
    "Dockerfile",
    "Makefile",
    "*.txt",
    "*.tar",
    "uv.lock",
]

[tool.ruff]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
line-length = 120

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
